Product mapping was done for EntityFramework

--- a/Northwind/Northwind.DataAccess/Northwind.DataAccess.csproj
+++ b/Northwind/Northwind.DataAccess/Northwind.DataAccess.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Abstract\IProductDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfProductDal.cs" />
+    <Compile Include="Concrete\EntityFramework\Mapping\ProductMap.cs" />
     <Compile Include="Concrete\EntityFramework\NorthwindContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
