NhProductDal was tested in DataAccess.Tests and test succed.

--- a/Northwind/Northwind.DataAccess.Tests/Northwind.DataAccess.Tests.csproj
+++ b/Northwind/Northwind.DataAccess.Tests/Northwind.DataAccess.Tests.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityFrameworkTests\EfProductDalTests.cs" />
+    <Compile Include="NHibernateTests\NhProductDalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
