--- a/Northwind/Northwind.Entities/Northwind.Entities.csproj
+++ b/Northwind/Northwind.Entities/Northwind.Entities.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domains\Category.cs" />
     <Compile Include="Domains\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
