--- a/Northwind/Northwind.Entities/Northwind.Entities.csproj
+++ b/Northwind/Northwind.Entities/Northwind.Entities.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComplexTypes\ProductDetail.cs" />
     <Compile Include="Domains\Category.cs" />
     <Compile Include="Domains\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -51,8 +52,6 @@
       <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ComplexTypes\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
