--- a/Northwind/Core/packages.config
+++ b/Northwind/Core/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
+  <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
 </packages>
