--- a/Northwind/Northwind.Business.Tests/packages.config
+++ b/Northwind/Northwind.Business.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net452" />
+  <package id="PostSharp" version="4.2.17" targetFramework="net452" />
 </packages>
