--- a/Northwind/Northwind.Business/Northwind.Business.csproj
+++ b/Northwind/Northwind.Business/Northwind.Business.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Abstract\IProductService.cs" />
     <Compile Include="Concrete\Managers\CategoryManager.cs" />
     <Compile Include="Concrete\Managers\ProductManager.cs" />
+    <Compile Include="DependencyResolvers\Ninject\BusinessModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules\FluentValidation\ProductValidator.cs" />
   </ItemGroup>
