--- a/Northwind/Core/packages.config
+++ b/Northwind/Core/packages.config
@@ -4,6 +4,7 @@
   <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
   <package id="PostSharp" version="4.2.17" targetFramework="net452" />
