logger implementation was was completed.

--- a/Northwind/Northwind.MvcWebUI/log4net.config
+++ b/Northwind/Northwind.MvcWebUI/log4net.config
@@ -5,11 +5,11 @@
 	</configSections>
 	<log4net>
 		<appender name="JsonFileAppender" type="log4net.Appender.FileAppender">
-			<file value="C://Log//log.json" />
+			<file value="log.json" />
 			<layout type="Core.CrossCuttingConcerns.Logging.Log4Net.Layouts.JsonLayout" />
 		</appender>
 		<appender name="SimpleFileAppender" type="log4net.Appender.FileAppender">
-			<file value="C://Log//log.txt" />
+			<file value="log.txt" />
 			<layout type="log4net.Layout.SimpleLayout" />
 		</appender>
 		<!-->appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
