--- a/Northwind/Northwind.Business/packages.config
+++ b/Northwind/Northwind.Business/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.1.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
   <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
