FluentValidation was implemented and CustomException filter was created.

--- a/Northwind/Core/Core.csproj
+++ b/Northwind/Core/Core.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Utilities\Common\WcfProxy.cs" />
     <Compile Include="Utilities\MapperHelpers\AutoMapperHelper.cs" />
     <Compile Include="Utilities\Mvc\Infrastructure\NinjectControllerFactory.cs" />
+    <Compile Include="Utilities\Mvc\Infrastructure\NinjectValidatorFactory.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
