--- a/Northwind/Northwind.MvcWebUI/Web.config
+++ b/Northwind/Northwind.MvcWebUI/Web.config
@@ -18,7 +18,7 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="log4net.Config" value="log4net.config" />
 		<add key="log4net.Config.Watch" value="false" />
-		<add key="ServiceAddress" value="http://localhost:51476/{0}.svc"/>
+		<add key="ServiceAddress" value="http://localhost:51476/{0}.svc" />
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.5.2" />
@@ -36,7 +36,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
@@ -65,9 +65,7 @@
 			</basicHttpBinding>
 		</bindings>
 		<client>
-			<endpoint address="https://tckimlik.nvi.gov.tr/Service/KPSPublic.asmx"
-			  binding="basicHttpBinding" bindingConfiguration="KPSPublicSoap"
-			  contract="KpsServiceReference.KPSPublicSoap" name="KPSPublicSoap" />
+			<endpoint address="https://tckimlik.nvi.gov.tr/Service/KPSPublic.asmx" binding="basicHttpBinding" bindingConfiguration="KPSPublicSoap" contract="KpsServiceReference.KPSPublicSoap" name="KPSPublicSoap" />
 		</client>
 	</system.serviceModel>
 </configuration>
