--- a/Northwind/Northwind.MvcWebUI/packages.config
+++ b/Northwind/Northwind.MvcWebUI/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
+  <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
+  <package id="FluentValidation.MVC5" version="6.4.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
@@ -8,4 +10,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
   <package id="PostSharp" version="4.2.17" targetFramework="net452" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net452" />
 </packages>
